# Home_work_17

./: pyproject.toml  schemas.py  test_reqres.py  utils.py
tests/: test_create_method.py  test_delete_method.py  test_get_single_user_info.py  test_post_login_method.py  test_update_method.py
tests_api_methods/: pyproject.toml
tests_api_methods/tests/: test_create_method.py  test_delete_method.py  test_get_single_user_info.py  test_post_login_method.py  test_update_method.py
