[tool.poetry]
name = "tests-api-methods"
version = "0.1.0"
description = ""
authors = ["Oksana Bondareva <xanka359@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
requests = "^2.31.0"
jsonschema = "^4.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
